fix: add option for deploy on k8s